feat(kafka): bump kafka images 8.0.0
* update tracing for deprecated apis
* update test containers